# ptouch-print

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  configure  configure.ac
data/: ptouch.ui
include/: ptouch.h
po/: LINGUAS  POTFILES.in  de.po  en.po  ptouch.pot
src/: libptouch.c  ptouch-gtk.c  ptouch-print.c
